--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -63,8 +63,8 @@ jobs:
             - name: Build production image
               uses: docker/build-push-action@v6
               with:
-                  context: .
-                  file: Dockerfile
+                  # context: .
+                  # file: Dockerfile
                   platforms: ${{ matrix.platform }}
                   labels: ${{ steps.meta.outputs.labels }}
                   # push: true
