--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,20 +39,6 @@ jobs:
             # - name: Checkout repository
             #   uses: actions/checkout@v4
 
-            - name: Set up QEMU
-              uses: docker/setup-qemu-action@v3
-
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
-            - name: Cache Docker layers
-              uses: actions/cache@v4
-              with:
-                  path: ${{ runner.temp }}/.buildx-cache
-                  key: ${{ runner.os }}-buildx-${{ github.sha }}
-                  restore-keys: |
-                      ${{ runner.os }}-buildx-
-
             - name: Log in to GitHub Container Registry
               uses: docker/login-action@v3
               with:
@@ -60,7 +46,14 @@ jobs:
                   username: ${{ github.actor }}
                   password: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Build production image
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Build and push by digest
+              id: build
               uses: docker/build-push-action@v6
               with:
                   # context: .
@@ -70,19 +63,12 @@ jobs:
                   push: false
                   tags: ${{ env.REGISTRY_IMAGE }}
                   outputs: type=image,push-by-digest=true,name-canonical=true,push=true
-                  cache-from: type=local,src=${{ runner.temp }}/.buildx-cache
-                  cache-to: type=local,dest=${{ runner.temp }}/.buildx-cache-new,mode=max
 
             - name: Export digest
               run: |
                   mkdir -p ${{ runner.temp }}/digests
                   digest="${{ steps.build.outputs.digest }}"
                   touch "${{ runner.temp }}/digests/${digest#sha256:}"
-
-            - name: Move cache
-              run: |
-                  rm -rf ${{ runner.temp }}/.buildx-cache
-                  mv ${{ runner.temp }}/.buildx-cache-new ${{ runner.temp }}/.buildx-cache
 
             - name: Upload digest
               uses: actions/upload-artifact@v4
