--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "packageManager": "pnpm@10.5.2",
     "dependencies": {
         "dockerode": "^4.0.4",
-        "mkcert": "^3.2.0",
+        "node-forge": "^1.3.1",
         "yaml": "^2.7.0"
     }
 }
