--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ on:
             - main
 
 env:
-    REGISTRY_IMAGE: ghcr.io/munezaclovis/mkcert
+    REGISTRY_IMAGE: ghcr.io/${{ github.repository }}
 
 permissions:
     contents: read
